; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_epci.c_celleb_epci_make_config_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_epci.c_celleb_epci_make_config_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }
%struct.pci_controller = type { %struct.pci_bus* }

@.str = private unnamed_addr constant [26 x i8] c"EPCI: config_addr = 0x%p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.pci_bus*, %struct.pci_controller*, i32, i32)* @celleb_epci_make_config_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @celleb_epci_make_config_addr(%struct.pci_bus* %0, %struct.pci_controller* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.pci_bus*, align 8
  %6 = alloca %struct.pci_controller*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.pci_bus* %0, %struct.pci_bus** %5, align 8
  store %struct.pci_controller* %1, %struct.pci_controller** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %11 = load %struct.pci_controller*, %struct.pci_controller** %6, align 8
  %12 = getelementptr inbounds %struct.pci_controller, %struct.pci_controller* %11, i32 0, i32 0
  %13 = load %struct.pci_bus*, %struct.pci_bus** %12, align 8
  %14 = icmp ne %struct.pci_bus* %10, %13
  br i1 %14, label %15, label %33

15:                                               ; preds = %4
  %16 = load %struct.pci_controller*, %struct.pci_controller** %6, align 8
  %17 = call i64 @celleb_epci_get_epci_cfg(%struct.pci_controller* %16)
  %18 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %19 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, 255
  %22 = shl i32 %21, 16
  %23 = load i32, i32* %7, align 4
  %24 = and i32 %23, 255
  %25 = shl i32 %24, 8
  %26 = or i32 %22, %25
  %27 = load i32, i32* %8, align 4
  %28 = and i32 %27, 255
  %29 = or i32 %26, %28
  %30 = or i32 %29, 16777216
  %31 = zext i32 %30 to i64
  %32 = add nsw i64 %17, %31
  store i64 %32, i64* %9, align 8
  br label %44

33:                                               ; preds = %4
  %34 = load %struct.pci_controller*, %struct.pci_controller** %6, align 8
  %35 = call i64 @celleb_epci_get_epci_cfg(%struct.pci_controller* %34)
  %36 = load i32, i32* %7, align 4
  %37 = and i32 %36, 255
  %38 = shl i32 %37, 8
  %39 = load i32, i32* %8, align 4
  %40 = and i32 %39, 255
  %41 = or i32 %38, %40
  %42 = zext i32 %41 to i64
  %43 = add nsw i64 %35, %42
  store i64 %43, i64* %9, align 8
  br label %44

44:                                               ; preds = %33, %15
  %45 = load i64, i64* %9, align 8
  %46 = call i32 @pr_debug(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i64 %45)
  %47 = load i64, i64* %9, align 8
  ret i64 %47
}

declare dso_local i64 @celleb_epci_get_epci_cfg(%struct.pci_controller*) #1

declare dso_local i32 @pr_debug(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
